<resources>
    <string name="debug_testing_tools">Debug Tools</string>
    <string name="debug_btn_init_msdk">Init MSDK</string>
    <string name="debug_btn_unInit_msdk">UnInit MSDK</string>
    <string name="debug_btn_register_app">Register app</string>
    <string name="debug_btn_enable_ldm">Enable LDM</string>
    <string name="debug_btn_disable_ldm">Disable LDM</string>
    <string name="debug_key">Key List</string>
    <string name="debug_key_search">Search</string>
    <string name="debug_item_key_value_title">Key/Value</string>
    <string name="debug_item_key_value_description">Demonstrate how to use the Key/Value function</string>
    <string name="debug_item_media_file_title">Media Files</string>
    <string name="debug_item_media_file_description">Demonstrate how to use the Media Files function</string>
    <string name="debug_item_multi_video_decoding_title">Multi-Video Decoding</string>
    <string name="debug_item_multi_video_decoding_description">Demonstrate how to use the Multi-Video Decoding function</string>
    <string name="debug_item_livestreaming_title">LiveStreaming</string>
    <string name="debug_item_livestreaming_title_description">Demonstrate how to use the LiveStream</string>
    <string name="debug_item_rtspclient_title">RtspClient</string>
    <string name="debug_item_rtspclient_title_description">Demonstrate how to use the RtspClient</string>
    <string name="debug_item_rtspserver_title">RtspServer</string>
    <string name="debug_item_rtspserver_title_description">Demonstrate how to use the RtspServer</string>
    <string name="debug_item_gb28181_title">GB28181Publisher</string>
    <string name="debug_item_gb28181_title_description">Demonstrate how to use the GB28181Publisher</string>
    <string name="debug_item_video_convert">ConvertVideo</string>
    <string name="debug_item_video_convert_description">Demonstrate how to use the ConvertVideo</string>
    <string name="debug_item_multi_device_title">Multi-Device</string>
    <string name="debug_item_multi_device_title_description">Demonstrate how to use the MultiDevice</string>
    <string name="debug_interaction_center_title">Interaction-Center</string>
    <string name="debug_interaction_center_title_description">Demonstrate how to use the Interaction-Center</string>
    <string name="debug_imu_calibration">Imu Calibration</string>
    <string name="debug_imu_calibration_successful">IMU Calibration Successful</string>
    <string name="debug_imu_calibration_title_description">Demonstrate Imu calibration</string>
    <string name="debug_photograph">Photograph</string>
    <string name="debug_compass_calibration">Compass Calibration</string>
    <string name="debug_compass_calibration_title_description">Demonstrate Compass calibration</string>
    <string name="debug_common_text_imu_calibration">IMU Calibration</string>
    <string name="debug_common_text_calibration_tip_1">Please place the aircraft on a level surface</string>
    <string name="debug_common_text_calibration_tip_2">Please do not move, power off, or reboot the aircraft during calibration</string>
    <string name="debug_common_text_calibration_tip_3">Calibrating… Please wait</string>
    <string name="debug_common_text_calibration_tip_4">Follow the instruction on the left to place the aircraft accordingly</string>
    <string name="debug_common_text_calibration_faild">Calibration failed</string>
    <string name="debug_text_calibration_sucess">Calibration successful</string>
    <string name="debug_fight_params_title">FIGHT_PARAMS</string>
    <string name="debug_fight_params_title_description">Demonstrate how to use the FIGHT_PARAMS</string>
    <string name="debug_vision_params_title">Visual DAT capture</string>
    <string name="debug_vision_params_title1">Visual MP4 capture</string>
    <string name="debug_vision_params_title2">Visual YUV capture</string>
    <string name="debug_vision_params_title_description">Demonstrate how to use DAT capture</string>
    <string name="debug_vision_params_title1_description">Demonstrate how to use MP4 capture</string>
    <string name="debug_vision_params_title2_description">Demonstrate how to use YUV capture</string>
    <string name="debug_vision_track_title">VISION_TRACK</string>
    <string name="debug_vision_track_title_description">Demonstrate how to use the VISION_TRACK</string>
    <string name="debug_vision_original_track_title_description">Demonstrate how to use the VISION_PARAMS</string>
    <string name="debug_sky_link_title">SKY_LINK</string>
    <string name="debug_sky_link_title_description">Demonstrate how to use the SKY_LINK</string>
    <string name="debug_report_control_title">REPORT_CONTROL</string>
    <string name="debug_report_control_title_description">Demonstrate how to use the REPORT_CONTROL</string>
    <string name="debug_scenario_testing_title">Scenario Testing</string>
    <string name="debug_scenario_testing_description">Demonstrate how to use the Scenario Testing</string>
    <string name="debug_switch_setting">SWITCH_SETTING</string>
    <string name="debug_switch_setting_title_description">Demonstrate how to switch settings</string>
    <string name="debug_system_update">SYSTEM_UPDATE</string>
    <string name="debug_system_update_title_description">Demonstrate how to switch settings</string>
    <string name="debug_image_transmission">IMAGE_TRANSMISSION</string>
    <string name="debug_image_transmission_title_description">Demonstrate how to image_transmission</string>
    <string name="debug_upload_download_test">UPLOAD_DOWNLOAD_TEST</string>
    <string name="debug_upload_download_test_title_description">Demonstrate how to test upload or download</string>
    <string name="video_decode_page">VIDEO_DECODE</string>
    <string name="video_decode_page_title_description">Video stream decode format 264 and 265 switching</string>
    <string name="debug_confirm">Sure</string>
    <string name="debug_set_all">SET ALL</string>
    <string name="debug_get_all">GET ALL</string>
    <string name="debug_set_get_all">SET GET ALL</string>
    <string name="debug_action_all">ACTION ALL</string>
    <string name="debug_listen_all">LISTEN ALL</string>
    <string name="debug_un_listen_all">UNLISTEN ALL</string>
    <string name="debug_common_text_confirm">Confirm</string>
    <string name="debug_pre_signed_get">Pre-signed get</string>
    <string name="debug_upload_file">Upload file</string>
    <string name="debug_upload_status_upgrade">Upload status update</string>
    <string name="debug_upload_success_upgrade">Notification of successful upload</string>
    <string name="debug_pre_signed_upgrade">Pre-signed URL refresh</string>
    <string name="debug_camera_file_download">Capability set download test</string>
    <string name="debug_sky_upgrade_test">Sky upgrade test</string>
    <string name="debug_battery">Battery</string>
    <string name="debug_gimbal">Dreadlocks</string>
    <string name="debug_camera">Camera</string>
    <string name="debug_ble">BLE</string>
    <string name="debug_airlink">AIRLINK</string>
    <string name="debug_ai_service">AI Service</string>
    <string name="debug_flight_control">FlightController</string>
    <string name="debug_flight_params">FlightParams</string>
    <string name="debug_product">Product</string>
    <string name="debug_rtkbase">RTK Base</string>
    <string name="debug_rtkmobile">RTK mobile</string>
    <string name="debug_ocusync">OcuSync</string>
    <string name="debug_vision">Vision</string>
    <string name="debug_rtk">Rtk</string>
    <string name="debug_radar">Radar</string>
    <string name="debug_ntrip">4G module Ntrip</string>
    <string name="debug_mqtt">MQTT</string>
    <string name="debug_lte_module">4G module</string>
    <string name="debug_mobile_network">Mobile Network</string>
    <string name="debug_on_board">OnBoard</string>
    <string name="debug_payload">Payload</string>
    <string name="debug_lidar">Lidar</string>
    <string name="debug_waypoint">Waypoint</string>
    <string name="debug_ai_track">AI Track</string>
    <string name="debug_remote_id">RemoteId</string>
    <string name="debug_system_manager">SystemManager</string>
    <string name="debug_nest">Nest</string>
    <string name="debug_mission_manager">MISSION MANAGER</string>
    <string name="debug_accessories_proxy">ACCESSORIES PROXY</string>
    <string name="debug_cloud_api">CLOUD API </string>
    <string name="debug_radary_proxy">RADARY PROXY</string>
    <string name="debug_common">Common Key</string>
    <string name="debug_single_test">Single Test</string>
    <string name="debug_batch_test">Batch Test</string>
    <string name="debug_autonomy">Autonomy</string>
    <string name="debug_wifi">Wifi</string>
    <string name="debug_data_security">Data Security</string>
    <string name="debug_rtc">RTC</string>
    <string name="debug_login_input_content_not_empty">The input user name or password cannot be empty</string>
    <string name="debug_login_pls_connect_network">Please check the network connection first</string>
    <string name="debug_remote_controller">Remote Controller Only</string>
    <string name="debug_login_box_tvSn">Current serial number:</string>
    <string name="debug_setting_account_exit">Logout</string>
    <string name="debug_login_nest">Command center login</string>
    <string name="debug_login_command_center">Pilot login</string>
    <string name="debug_setting_account_name">Account name</string>
    <string name="debug_login_input_server_host">Please enter the server name</string>
    <string name="debug_login_input_server_password">Please enter the password</string>
    <string name="debug_login_serial_number">Current serial number</string>
    <string name="debug_login_box_ok">OK</string>
    <string name="debug_login_box_cancel">Cancel</string>
    <string name="debug_remote_controller_pairing">Remote Controller Pairing</string>
    <string name="debug_remote_controller_pairing_chinese">Remote control pairing</string>
    <string name="debug_remote_controller_calibration">Remote Controller Calibration</string>
    <string name="debug_remote_controller_calibration_chinese">Remote control calibration</string>
    <string name="debug_start_pairing">Start Pairing</string>
    <string name="debug_exit_pairing">Exit Pairing</string>
    <string name="debug_start_calibration">Start Calibration</string>
    <string name="debug_start_imu_calibration">Start IMU Calibration</string>
    <string name="debug_start_compass_calibration">Start Compass Calibration</string>
    <string name="debug_start_calibration_chinese">Start calibration</string>
    <string name="debug_exit_calibration">Exit Calibration</string>
    <string name="debug_exit_calibration_chinese">Exit calibration</string>
    <string name="debug_listen">Listen</string>
    <string name="debug_action">Action</string>
    <string name="debug_unlistenall">UNLISTENALL</string>
    <string name="debug_startgpstest">StartGpsTest</string>
    <string name="debug_test_initial_message">Result will be displayed here</string>
    <string name="debug_text_calibration_waiting">Calibrating… Please wait…</string>
    <string name="debug_get">GET</string>
    <string name="debug_set">SET</string>
    <string name="debug_report">REPORT</string>
    <string name="debug_param_test">PARAM_TEST</string>
    <string name="debug_clear_all">Clear All</string>
    <string name="debug_add_as_command">Add As Command</string>
    <string name="debug_subtype">srcNodeId</string>
    <string name="debug_subindex">dstNodeId</string>
    <string name="debug_results_will_be_printed_here">Results will be printed here.</string>
    <string name="debug_operate_listen_record_tips">Operate listen record tips</string>
    <string name="debug_component_index">Componentindex</string>
    <string name="debug_device_log_query"> Log power-on query </string>
    <string name="debug_device_log_downLoad"> Log download </string>
</resources>