<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/debug_gray">

    <Button
        android:id="@+id/queryLogList"
        android:layout_width="110dp"
        android:layout_height="55dp"
        android:layout_marginTop="50dp"
        android:layout_marginStart="25dp"
        android:text="@string/debug_device_log_query"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/logDownLoad"
        android:layout_width="110dp"
        android:layout_height="55dp"
        android:layout_marginTop="50dp"
        android:layout_marginStart="25dp"
        android:text="@string/debug_device_log_downLoad"
        app:layout_constraintStart_toEndOf="@id/queryLogList"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/logDownLoad2"
        android:layout_width="110dp"
        android:layout_height="55dp"
        android:layout_marginTop="50dp"
        android:layout_marginStart="25dp"
        android:text="@string/debug_device_log_downLoad"
        app:layout_constraintStart_toEndOf="@id/logDownLoad"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="110dp"
        android:layout_height="55dp"
        android:layout_marginTop="50dp"
        android:layout_marginStart="25dp"
        android:text="@string/debug_login_box_cancel"
        app:layout_constraintStart_toEndOf="@id/logDownLoad2"
        app:layout_constraintTop_toTopOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>