<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/debug_light_gray2">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/startImuCalibration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/debug_start_imu_calibration" />

    </LinearLayout>

    <TextView
        android:id="@+id/calibrateInstruction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/debug_dimen_dp_32"
        android:gravity="center"
        android:text="@string/debug_test_initial_message"
        android:textColor="@color/debug_white"
        android:textSize="@dimen/debug_text_size_sp_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <LinearLayout
        android:id="@+id/calibrateStateLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/calibrateInstruction"
        tools:visibility="visible">

        <TextView
            android:id="@+id/calibratePositionText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/debug_color_secondary_ffda00"
            android:textSize="@dimen/debug_text_size_sp_20"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/calibratePositionImage"
            android:layout_width="@dimen/debug_dimen_dp_350"
            android:layout_height="@dimen/debug_dimen_dp_250"
            android:layout_marginTop="@dimen/debug_dimen_dp_8"
            app:srcCompat="@drawable/debug_setting_icon_imu_1" />

        <TextView
            android:id="@+id/calibratePositionText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/debug_dimen_dp_8"
            android:gravity="center"
            android:text="@string/debug_text_calibration_waiting"
            android:textColor="@color/debug_white"
            android:textSize="@dimen/debug_text_size_sp_20"
            android:textStyle="italic" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>