<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/debug_light_gray2"
    android:orientation="horizontal"
    android:padding="3dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/debug_sdk_bg_stroke_common">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_filter_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingLeft="5dp">

                    <TextView
                        android:id="@+id/tv_list_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/debug_key"
                        android:textColor="@color/debug_white"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_count"
                        android:layout_width="wrap_content"
                        android:layout_height="15dp"
                        android:text="(12573)"
                        android:textColor="@color/debug_gray"
                        android:textSize="12sp" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/iv_action_arrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/debug_icon_arrow" />

            </LinearLayout>

            <include layout="@layout/layout_deliver_horizontal_line" />

            <LinearLayout
                android:id="@+id/ll_filter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_filter"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:drawableRight="@drawable/debug_key_search_icon"
                    android:drawablePadding="5dp"
                    android:gravity="center"
                    android:hint="@string/debug_key_search"
                    android:imeOptions="actionDone"
                    android:singleLine="true"
                    android:textColor="@color/debug_white"
                    android:textColorHint="@color/debug_gray"
                    android:textStyle="italic" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <include layout="@layout/layout_deliver_vertical_line" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/ll_channel_filter_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_operate_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginVertical="7dp"
                    android:drawableEnd="@drawable/debug_icon_arrow"
                    android:drawablePadding="5dp"
                    android:text="@string/debug_camera"
                    android:textColor="@color/debug_white"
                    android:textSize="16sp"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/tv_batch_test"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginEnd="4dp"
                    android:layout_toStartOf="@+id/sw_batch_test"
                    android:text="@string/debug_single_test"
                    android:textColor="@color/debug_white" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/sw_batch_test"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerInParent="true"
                    android:layout_marginRight="20dp"
                    android:enabled="true" />

            </RelativeLayout>

            <include layout="@layout/layout_deliver_horizontal_line" />

            <include
                android:id="@+id/layout_key"
                layout="@layout/layout_key_operate" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>

